added get api of survey
