# swagger.yaml
@@ -49,6 +49,12 @@ paths:
       produces:
         - application/json
       parameters:
+        - name: Authorization
+          in: header
+          required: false
+          type: string
+          description: ''
+          default: ''
         - name: id
           in: query
           type: string
@@ -73,6 +79,12 @@ paths:
       summary: 'http://127.0.0.1:3000/v1/surveys'
       operationId: 'createSurvey'
       parameters:
+        - name: Authorization
+          in: header
+          required: false
+          type: string
+          description: ''
+          default: ''
         - name: Content-Type
           in: header
           required: false
@@ -95,7 +107,7 @@ paths:
             $ref: "#/definitions/errorMessage"
         '500':
           description: 'Server error'
-  /surveys/{surveyId}/questions:
+  /surveys/questions:
     post:
       tags:
       - "Surveys"
@@ -103,12 +115,12 @@ paths:
       summary: 'http://127.0.0.1:3000/v1/surveys/{surveyId}'
       operationId: 'addSurveyQuestions'
       parameters:
-        - name: surveyId
-          in: path
-          required: true
+        - name: Authorization
+          in: header
+          required: false
           type: string
           description: ''
-          default: 'application/json'
+          default: ''
         - name: Content-Type
           in: header
           required: false
@@ -139,6 +151,12 @@ paths:
       summary: 'http://127.0.0.1:3000/v1/surveys/{surveyId}/result'
       operationId: 'getSurveyResult'
       parameters:
+        - name: Authorization
+          in: header
+          required: false
+          type: string
+          description: ''
+          default: ''
         - name: surveyId
           in: path
           required: true
@@ -180,7 +198,7 @@ paths:
           required: false
           type: string
           description: ''
-          default: 'Bearer '
+          default: ''
         - name: surveyId
           in: path
           required: true
@@ -263,6 +281,8 @@ definitions:
     - "type"
     - "options"
     properties:
+      surveyId:
+        type: "string"
       question:
         type: "string"
       type:
@@ -325,6 +345,8 @@ definitions:
       category:
         type: "string"
       subject:
+        type: "string"
+      topic:
         type: "string"
   surveyResultDateQuery:
     type: "object"
